Fix: fix text overflow  in login button

--- a/public/style.css
+++ b/public/style.css
@@ -38,7 +38,7 @@ header {
     background-color: #1b717c;
     color: #fff;
     font-weight: bolder;
-    font-size: 20px;
+    font-size: 2.5vw;
    
     border: none;
     border-radius: 5px;
@@ -49,7 +49,9 @@ header {
     
 }
 #logInbutton{
-    width: 250px;
+
+    white-space: nowrap; 
+    width: 70%;
 }
 
 #logoutButton:hover{
